--- a/src/main/java/com/management/UI/PrincipalUI.form
+++ b/src/main/java/com/management/UI/PrincipalUI.form
@@ -93,11 +93,23 @@
                   <text value="Listar unidadades hospitalares"/>
                 </properties>
               </component>
+              <component id="b27da" class="javax.swing.JMenuItem" binding="miListaEspecialidades">
+                <constraints/>
+                <properties>
+                  <text value="Lista especialidades"/>
+                </properties>
+              </component>
+              <component id="aa87f" class="javax.swing.JMenuItem" binding="miCriarEspecialidade">
+                <constraints/>
+                <properties>
+                  <text value="Criar Especialidade"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="c2f30" class="javax.swing.JMenu" binding="mnQuarto" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Quartos"/>
@@ -120,7 +132,7 @@
           </grid>
           <grid id="15d3b" class="javax.swing.JMenu" binding="mnLeitos" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
-              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Leitos"/>
@@ -155,7 +167,7 @@
           </grid>
           <grid id="d719c" class="javax.swing.JMenu" binding="mnPacientes" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
-              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Pacientes"/>
