--- a/src/main/java/com/management/UI/PrincipalUI.form
+++ b/src/main/java/com/management/UI/PrincipalUI.form
@@ -11,7 +11,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="e402a" class="javax.swing.JMenuBar" binding="mbSistema" layout-manager="GridLayoutManager" row-count="1" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="e402a" class="javax.swing.JMenuBar" binding="mbSistema" layout-manager="GridLayoutManager" row-count="1" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
@@ -111,6 +111,12 @@
                   <text value="Adicionar equipe a unidade"/>
                 </properties>
               </component>
+              <component id="909e" class="javax.swing.JMenuItem" binding="miUnidadeAddQuarto">
+                <constraints/>
+                <properties>
+                  <text value="Adicionar quarto a Unidade"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="c2f30" class="javax.swing.JMenu" binding="mnQuarto" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
@@ -200,6 +206,11 @@
               </component>
             </children>
           </grid>
+          <hspacer id="366ee">
+            <constraints>
+              <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
         </children>
       </grid>
     </children>
