--- a/src/main/java/com/management/UI/PrincipalUI.form
+++ b/src/main/java/com/management/UI/PrincipalUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.management.UI.PrincipalUI">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="620" height="497"/>
@@ -14,7 +14,7 @@
       <grid id="e402a" class="javax.swing.JMenuBar" binding="mbSistema" layout-manager="GridLayoutManager" row-count="1" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -175,6 +175,12 @@
                   <text value="Cadastrar novos Equipamentos"/>
                 </properties>
               </component>
+              <component id="e4b39" class="javax.swing.JMenuItem" binding="miQuartoAddLeito">
+                <constraints/>
+                <properties>
+                  <text value="Adicionar Leito a um quarto"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="d719c" class="javax.swing.JMenu" binding="mnPacientes" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
@@ -213,6 +219,22 @@
           </hspacer>
         </children>
       </grid>
+      <component id="7f60d" class="javax.swing.JLabel" binding="labelInstrucao">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Veja a seguir as instruções para o aplicativo de gerencia de leitos do Hospital São Judas"/>
+        </properties>
+      </component>
+      <component id="1cb4e" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Funcionário"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
