--- a/src/main/java/com/management/UI/Funcionario/FuncionarioFormUI.form
+++ b/src/main/java/com/management/UI/Funcionario/FuncionarioFormUI.form
@@ -3,10 +3,11 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="7" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="17" y="10" width="314" height="400"/>
+      <xy x="17" y="10" width="524" height="500"/>
     </constraints>
     <properties>
-      <preferredSize width="300" height="300"/>
+      <enabled value="true"/>
+      <preferredSize width="100" height="100"/>
     </properties>
     <border type="none"/>
     <children>
