--- a/src/main/java/com/management/UI/PrincipalUI.form
+++ b/src/main/java/com/management/UI/PrincipalUI.form
@@ -6,7 +6,7 @@
       <xy x="20" y="20" width="1011" height="536"/>
     </constraints>
     <properties>
-      <preferredSize width="300" height="300"/>
+      <preferredSize width="600" height="500"/>
       <verifyInputWhenFocusTarget value="false"/>
     </properties>
     <border type="none"/>
@@ -79,6 +79,12 @@
                 <constraints/>
                 <properties>
                   <text value="Pesquisar equipe por nome"/>
+                </properties>
+              </component>
+              <component id="b175c" class="javax.swing.JMenuItem" binding="miEditarFuncionario">
+                <constraints/>
+                <properties>
+                  <text value="Trocar Funciário de equipe"/>
                 </properties>
               </component>
             </children>
